<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView_6"
            android:text="@string/txt_are_you_sure"
            android:textColor="@color/black"
            android:textSize="@dimen/size20" />

        <TextView
            android:id="@+id/tvBody"
            style="@style/TextView_4"
            android:layout_marginTop="@dimen/size8"
            android:paddingHorizontal="@dimen/size20"
            android:text="@string/txt_exit_app"
            android:textColor="@color/black"
            android:textSize="@dimen/size14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:gravity="end"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/TextView_6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size44"
                android:background="?android:selectableItemBackground"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/size20"
                android:stateListAnimator="@null"
                android:text="@string/txt_cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/size14"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/TextView_6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size44"
                android:background="?android:selectableItemBackground"
                android:stateListAnimator="@null"
                android:text="@string/txt_yes"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/size14" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>