<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/size10"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextView_4"
            android:layout_margin="@dimen/size16"
            android:text="@string/txt_why_did_you_uninstall_the_app"
            android:textSize="@dimen/size14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvItemUninstall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/size16"
            android:layout_marginTop="@dimen/size8"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/llBottomUninstall"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/item_language" />

        <LinearLayout
            android:id="@+id/llBottomUninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size20"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size12"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvCancel"
                style="@style/TextView_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_r10_main"
                android:text="@string/txt_cancel"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnUninstall"
                style="@style/TextView_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:text="@string/txt_uninstall" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>